# zest.releaser

./: .coveragerc  .gitignore  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  CREDITS.rst  DEVELOPERS.rst  DEVELOPERS.txt  DEVELOPING.rst  Dockerfile  LICENSE.rst  MANIFEST.in  README.rst  README.txt  bootstrap.py  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  tests.yml
doc/source/: assumptions.rst  changelog.rst  code.rst  conf.py  credits.rst  developing.rst  entrypoints.rst  further_reading.rst  index.rst  options.rst  project.rst  uploading.rst  versions.rst
docs/: HISTORY.txt  LICENSE.txt
zest/: __init__.py
zest/releaser/: CREDITS.txt  HISTORY.txt  README.txt  TODO.txt  __init__.py  addchangelogentry.py  baserelease.py  bumpversion.py  bzr.py  choose.py  entrypoints.txt  fullrelease.py  git.py  hg.py  lasttagdiff.py  lasttaglog.py  longtest.py  postrelease.py  preparedocs.py  prerelease.py  pypi.py  release.py  svn.py  towncrier_hooks.py  utils.py  vcs.py
zest/releaser/tests/: addchangelogentry.txt  baserelease.txt  bumpversion.txt  bzr.txt  choose.txt  cmd_error.py  example.tar  fullrelease.txt  functional-bzr.txt  functional-git.txt  functional-mercurial.txt  functional-py24usezip.txt  functional-svn-singular.txt  functional-svn.txt  functional-with-hooks.txt  functional.py  functional.txt  git.txt  gitsvn.txt  hg.txt  postrelease.txt  preparedocs.txt  prerelease.txt  pypi.txt  pypirc.txt  pypirc_both.txt  pypirc_new.txt  pypirc_no_input.txt  pypirc_no_release.txt  pypirc_old.txt  pypirc_simple.txt  pypirc_universal_create.txt  pypirc_universal_nocreate.txt  pypirc_yes_release.txt  pyproject-toml.txt  pyproject.toml  release.txt  svn-singular.txt  svn.txt  test_setup.py  (+2 more)
