[metadata]
long_description = file: README.rst, CREDITS.rst, CHANGES.rst

[check-manifest]
ignore =
    *cfg
    .*yml
    .coveragerc
    .dockerignore
    .flake8
    .pre-commit-config.yaml
    bootstrap.py
    doc/build
    doc/build/*
    Dockerfile

[bdist_wheel]
# Python 3 only
universal = 0
